--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@steeze-ui/heroicons": "^2.2.3",
+		"@steeze-ui/svelte-icon": "^1.5.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.14",
