--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^10.0.0"
+		"firebase": "^10.0.0",
+		"svelte-bricks": "^0.2.0"
 	}
 }
