--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/adapter-vercel": "^3.0.2",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/packery": "^1.4.37",
 		"autoprefixer": "^10.4.14",
 		"daisyui": "^3.2.1",
+		"packery": "^2.1.2",
 		"postcss": "^8.4.25",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
