--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@js-temporal/polyfill": "^0.4.4",
 		"firebase": "^10.0.0",
 		"muuri": "^0.9.5",
+		"phaser": "^3.86.0",
 		"svelte-bricks": "^0.2.0"
 	}
 }
